--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,18 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+#title {
+    width: 30%;
+    text-align: center;
+    padding-bottom: 1%;
+    border-bottom: 3px black solid;
+}
+
+.card-info {
+    width: 30%;
 }
 
 #map {
@@ -9,4 +21,54 @@ body {
     bottom: 0;
     left: 30%;
     width: 70%;
+}
+.card-1 {
+    margin-top: 20%;
+    margin-bottom: 10%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+  }
+  
+.card-1:hover {
+box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+padding: 2px 16px;
+}
+.card-2, .card-3, .card-4, .card-5, .card-6, .card-7 {
+    display: none;
+}
+
+#start, #back {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    position: relative;
+    margin-top: 2%;
+    left: 40%;
+    cursor: pointer;
+    outline: 0;
+    color: #fff;
+    background-color: #0d6efd;
+    border-color: #0d6efd;
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    border: 1px solid transparent;
+    padding: 6px 12px;
+    font-size: 16px;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+
+}
+
+#start:hover, #back:hover {
+    color: #fff;
+    background-color: #0b5ed7;
+    border-color: #0a58ca;
+}
+
+#back {
+    left: 30%;
+    display: none;
 }
